# autograder-py

./: .gitignore  .gitmodules  .mypy.ini  .pylintrc  LICENSE  README.md  config_manager.py  config_setup.py  example_usage.py  goals.txt  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.ci/: backend.py  check_style.sh  dump_api_test_data.py  unit-testing-config.json  util.py  verify_test_api_requests.py
.github/workflows/: main.yml
autograder/: __init__.py  __main__.py  assignment.py  assignment_test.py  code.py  code_test.py  error.py  fileop.py  fileop_test.py  filespec.py  git.py  question.py  question_test.py  style.py  style_test.py  submission.py  submission_test.py  utils.py
autograder/api/: common.py  common_test.py  config.py  constants.py  error.py  fetchgrades.py  history.py  model.py  peek.py  submit.py  version.json
autograder/cli/: __init__.py  __main__.py  args.py  cli_test.py  common.py  config.py  fetch-grades.py  grade-assignment.py  grade-submission.py  grade.py  history.py  parser.py  peek.py  pre-docker-grading.py  setup-grading-dir.py  style.py  submit.py  test-remote-submissions.py  test-submissions.py  user-add.py  user-auth.py  user-get.py  user-list.py  user-remove.py
autograder/cmd/: gradeassignment.py
autograder/model/: assignment.py  config.py  course.py  log.py  stats.py  user.py
autograder/run/: __init__.py  __main__.py  auth.py  change-pass.py  history.py  peek.py  reset-pass.py  submit.py
autograder/testing/: __init__.py  asserts.py  constants.py  model.py  server.py  serverrunner.py  testdata.py
autograder/util/: cli.py  confirm.py  dir.py  dirent.py  file.py  git.py  grading.py  gzip.py  gzip_test.py  hash.py  http.py  invoke.py  load.py  math.py  math_test.py  net.py  parse.py  password.py  path.py  prepare_submission.py  submission.py  terminal.py  testing.py  timestamp.py  timestamp_test.py  zip.py
docs/: development.md
scripts/: build_site.sh  check_all.sh  check_lint.sh  check_python_version.sh  check_server_version.sh  check_strict_types.sh  check_style.sh  check_types.sh  gen_docs.sh  run_tests.sh
tests/: base.py  server.py  test_api.py  test_assignment.py  test_config.py  test_date.py  test_fileop.py  test_gzip.py  test_import.py  test_prepare.py  test_style.py  test_timestamp.py
(+1064 files in other folders)
